deploy/games-zombofighter-api/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  generation: 1
  name: zombofight
  namespace: games

spec:
  rules:
    - host: game.zombo-ducks.xyz
      http:
        paths:
          - path: /readyz
            pathType: Exact
            backend:
              service:
                name: zombofight-api
                port:
                  number: 3333
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: zombofight-api
                port:
                  number: 3333
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: zombofight-api
                port:
                  number: 3333
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: zombofight-api
                port:
                  number: 3334

          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: zombofight-api
                port:
                  number: 3334

          - path: /
            pathType: Prefix
            backend:
              service:
                name: zombofight-ui
                port:
                  number: 3333
